# download_video_by_url

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  backup.sh  docker-compose.yaml  prometheus.yml  pyproject.toml  task.py
alembic/: env.py
alembic/versions/: 2026_05_12_1247-60c9986f0d7f_create_table_download_history.py  2026_05_12_1849-bbd06aab0cad_add_params_nullable_in_field_title.py  2026_05_13_1406-8ccd1c5949d4_add_fields_duration_resolution_and_.py  2026_06_26_0236-e2b5e7188dba_add_index_for_fields_status_and_created_.py
app/: main.py
app/config/: __init__.py  app.py  database.py  logging.py  paths.py  redis.py  settings.py
app/config/envs_template/: .env.app-prod  .env.postgres-prod  .env.postgres.template  .env.redis-prod  (+1 more)
app/core/: cors.py  handlers.py  limiter.py  redis_status.py  task_registry.py
app/database/: __init__.py  setup.py
app/dependencies/: __init__.py  async_redis_client.py  redis_client.py  session.py
app/repositories/: __init__.py  download_history.py
app/routers/: __init__.py  health.py  history.py  loading_media.py  media_info.py  stop_downloading.py  uploading_files.py
app/schemas/: __init__.py  download_history.py  file_name.py  load_media.py  media_info.py  recent_history.py
app/services/: __init__.py  cleanup.py  file_name.py  latest_history.py  loading_indicator.py  media_info.py  stop_task.py  worker.py
app/utils/: delete_symbol.py
backups/: backup.sh
docker_build/backend/: Dockerfile
docker_build/frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
(+9 files in other folders)
