[project]
name = "download-video-by-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "granian>=2.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvloop>=0.22.1",
    "yt-dlp[default]>=2026.3.17",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "pre-commit>=4.6.0",
    "uvicorn>=0.46.0",
]

[tool.isort]
# isort settings
profile = "black"
line_length = 100
src_paths  = ["app"]
known_first_party = ["config","core", "database","dependencies","routers", "services", "schemas"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "alembic", "redis", "yt_dlp"]


[tool.black]
# Black settings
line-length = 100
skip-string-normalization = true
include = "./*.py"
extend-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''
force-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disable_error_code = ["untyped-decorator"]
disallow_subclassing_any = false
